; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_h264qpel_mmi.c_ff_put_h264_qpel16_mc21_mmi.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_h264qpel_mmi.c_ff_put_h264_qpel16_mc21_mmi.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ff_put_h264_qpel16_mc21_mmi(i32* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca [1024 x i32], align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %10 = getelementptr inbounds [1024 x i32], [1024 x i32]* %7, i64 0, i64 0
  store i32* %10, i32** %8, align 8
  %11 = getelementptr inbounds [1024 x i32], [1024 x i32]* %7, i64 0, i64 0
  %12 = getelementptr inbounds i32, i32* %11, i64 256
  store i32* %12, i32** %9, align 8
  %13 = load i32*, i32** %8, align 8
  %14 = load i32*, i32** %9, align 8
  %15 = load i32*, i32** %5, align 8
  %16 = load i32, i32* %6, align 4
  %17 = call i32 @put_h264_qpel16_hv_lowpass_mmi(i32* %13, i32* %14, i32* %15, i32 16, i32 16, i32 %16)
  %18 = load i32*, i32** %4, align 8
  %19 = load i32*, i32** %5, align 8
  %20 = load i32*, i32** %8, align 8
  %21 = load i32, i32* %6, align 4
  %22 = call i32 @put_h264_qpel16_h_lowpass_l2_mmi(i32* %18, i32* %19, i32* %20, i32 %21, i32 16)
  ret void
}

declare dso_local i32 @put_h264_qpel16_hv_lowpass_mmi(i32*, i32*, i32*, i32, i32, i32) #1

declare dso_local i32 @put_h264_qpel16_h_lowpass_l2_mmi(i32*, i32*, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
